golang/cmd/dummer/dummer-all.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: dummer
  labels:
    name: dummer
---
apiVersion: v1
kind: Service
metadata:
  name: dummer
  namespace: dummer
spec:
  selector:
    app: dummer
  ports:
  - port: 8001
    targetPort: 8001
---
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    app: dummer
  name: dummer
  namespace: dummer
spec:
  replicas: 1
  selector:
    matchLabels:
      app: dummer
  template:
    metadata:
      labels:
        app: dummer
      annotations:
        consul.hashicorp.com/connect-inject: "true"
        consul.hashicorp.com/connect-service-upstreams: "dummy:8000"
    spec:
      serviceAccountName: dummer
      containers:
      - name: dummer
        image: veganafro/dummer_image:dev
        ports:
        - containerPort: 8001
        resources:
          limits:
            memory: 128Mi
            cpu: "1"
