golang/cmd/dummer/dummer-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: dummer
  namespace: dummer
spec:
  type: NodePort
  ports:
  - port: 8001
    protocol: TCP
    targetPort: 8001
  selector:
    app: dummer
